[package]
name = "honorary-fee-position"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "honorary_fee_position"

[features]
cpi = ["no-entrypoint"]
default = ["local-testing"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
local-testing = []  # Add this line

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

# [scripts]
# test = "anchor test -- --features local-testing"
